--- a/Simple Landing Page - Exercise/index.html
+++ b/Simple Landing Page - Exercise/index.html
@@ -41,7 +41,7 @@
             <!--paragrafo para conteudo-->
             <p class="post_content">
                 This is not a test from the <a href="https://en.wikipedia.org/wiki/Emergency_Broadcast_System"
-                    target="_blank">emergency broadcast system, this is the real thing!</a>
+                    target="_blank">emergency broadcast system</a>, this is the real thing!
             </p>
 
         </article>
