added links and cv

--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -23,13 +23,19 @@
                     <nav class="menu-items">
                         <ul>
                             <li>
-                                <a href="#">Home</a>
+                                <a href="pdf/Tarso Galvao CV 2022 Geral.pdf">Curriculum</a>
                             </li>
                             <li>
-                                <a href="#">Sobre</a>
+                                <a href="https://www.linkedin.com/in/tarso-galv%C3%A3o-06bb51228/" target="_blank">Linkedin</a>
                             </li>
                             <li>
-                                <a href="#">Contato</a>
+                                <a href="https://github.com/surtarso" target="_blank">Github</a>
+                            </li>
+                            <li>
+                                <a href="https://www.instagram.com/surtarso/" target="_blank">Instagram</a>
+                            </li>
+                            <li>
+                                <a href="mailto:tarso.galvao@gmail.com">Contact</a>
                             </li>
                         </ul>
                     </nav>
@@ -46,8 +52,8 @@
         <!-- card 1 -->
         <div class="card-container">
             <div class="card-text">
-                Teste teste testeeste teste testeeste teste testeeste teste teste
-                este teste testeeste teste testeeste teste testeeste teste teste 
+                On Github you will find most of my projects and studies. I do my best to keep everything up-to-date on my own, contributors are welcome!
+                From Web Design to Game Engines, algorithms and art, to Bash scripts, here is where I'll keep them, feel free to snoop around!
             </div>
             <a class="links" href="https://github.com/surtarso" target="_blank">
                 <div class="card">
@@ -60,7 +66,7 @@
         </div>
         <!-- card 2 -->
         <div class="card-container">
-            <a class="links" href="https://www.linkedin.com" target="_blank">
+            <a class="links" href="https://www.linkedin.com/in/tarso-galv%C3%A3o-06bb51228/" target="_blank">
                 <div class="card">
                     <div class="card-wrapper">
                         <h2>Linkedin</h2>
@@ -69,8 +75,7 @@
                 </div>
             </a>
             <div class="card-text">
-                Teste teste testeeste teste testeeste teste testeeste teste teste
-                este teste testeeste teste testeeste teste testeeste teste teste 
+                On Linkedin you will find my certifications and curriculum vitae.
             </div>
         </div>
         <!-- card 3 -->
