--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -26,7 +26,7 @@
                                 <a href="pdf/Tarso Galvao CV 2022 Geral.pdf">Curriculum</a>
                             </li>
                             <li>
-                                <a href="https://www.linkedin.com/in/tarso-galv%C3%A3o-06bb51228/" target="_blank">Linkedin</a>
+                                <a href="https://www.linkedin.com/in/tarsogalvao" target="_blank">Linkedin</a>
                             </li>
                             <li>
                                 <a href="https://github.com/surtarso" target="_blank">Github</a>
@@ -66,7 +66,7 @@
         </div>
         <!-- card 2 -->
         <div class="card-container">
-            <a class="links" href="https://www.linkedin.com/in/tarso-galv%C3%A3o-06bb51228/" target="_blank">
+            <a class="links" href="https://www.linkedin.com/in/tarsogalvao" target="_blank">
                 <div class="card">
                     <div class="card-wrapper">
                         <h2>Linkedin</h2>
