--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -12,7 +12,7 @@
     <!-- HEADER -->
     <header class="header">
         <div>
-            <button id="mode-selector">Dark Mode</button>
+            <button id="mode-selector">Black Hole</button>
             <div class="checkbox-container">
                 <div class="checkbox-wrapper">
                     <input type="checkbox" id="toggle">
