--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/style.css">
     <title>Tarso Galvão</title>
 </head>
 
@@ -107,7 +107,8 @@
     <!-- FOOTER -->
     <footer class="footer">
         <a href="mailto:tarso.galvao@gmail.com">Webmaster: Surtarso</a>
+        <p>. Powered by HTML5, CSS and Javascript.</p>
     </footer>
-    <script src="./index.js"></script>
+    <script src="src/scripts.js"></script>
 </body>
 </html>
