--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -47,6 +47,7 @@
         <!-- Header main image + name text-->
         <img class="header-image" src="img/me.gif">
         <h1>Tarso Galvão</h1>
+        <!-- <img src="./img/rocket.webp" style="width:20px;height:20px;" class="loader"> -->
         <h3>Full-Stack Developer</h3>
     </header>
 
