trying rockets... fail

--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -12,6 +12,7 @@
 <body>
     <!-- HEADER -->
     <header class="header">
+        <!-- <img src="./img/rocket.webp" style="width:25px;height:25px;" class="loader2"> -->
         <div>
             <button id="mode-selector">Black Hole</button>
             <div class="checkbox-container">
@@ -48,10 +49,8 @@
         <!-- Header main image + name text-->
         <img class="header-image" src="img/me.gif">
         <h1>Tarso Galvão</h1>
-        <!-- <img src="./img/rocket.webp" style="width:20px;height:20px;" class="loader"> -->
         <h3>Full-Stack Developer</h3>
-        <!-- link to tom's playground-->
-        <!-- <img class="tomsPlayground" src=""> -->
+        <!-- <img src="./img/rocket.webp" style="width:25px;height:25px;" class="loader"> -->
     </header>
 
     <!-- cards container -->
@@ -129,7 +128,7 @@
 
     <!-- FOOTER -->
     <footer class="footer">
-        <a href="mailto:tarso.galvao@gmail.com">Webmaster: Surtarso</a>
+        <a href="mailto:tarso.galvao@gmail.com">Webmaster: Tarso Galvão</a>
         <p>. Powered by HTML5, CSS and Javascript.</p>
     </footer>
     <script src="src/scripts.js"></script>
