--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -111,7 +111,7 @@
 
         <!-- card 4 -->
         <div class="card-container">
-            <a class="links" href="https://tarsogalvao.ddns.net/tom" target="_blank">
+            <a class="links" href="https://tarsogalvao.ddns.net/games" target="_blank">
                 <div class="card-4">
                     <div class="card-wrapper">
                         <h2>Playground</h2>
