--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -27,7 +27,7 @@
                     <nav class="menu-items">
                         <ul>
                             <li>
-                                <a href="pdf/Tarso Galvao CV 2022 Geral.pdf">Curriculum</a>
+                                <a href="pdf/Tarso Galvao CV 2022.pdf">Curriculum</a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/in/tarsogalvao" target="_blank">Linkedin</a>
