added github api for language graph

--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -56,6 +56,26 @@
     <!-- cards container -->
     <main class="container">
 
+
+        <!-- card 0 (no link to click on this one) -->
+        <div class="card-container">
+                <div class="card-0">
+                    <div class="card-wrapper">
+
+                        <div>
+                            <iframe id="iFrame" src="/api/api.html?surtarso"></iframe>
+                        </div>
+
+                    </div>
+                </div>
+            </a>
+            <div class="card-text">
+                These are the languages that I'm currently studying and focusing on. All my projects available are developed with them and
+                I'm always searching for new ways to improve my skills.
+            </div>
+        </div>
+
+
         <!-- card 1 -->
         <div class="card-container">
             <div class="card-text">
@@ -87,7 +107,7 @@
                 </div>
             </a>
             <div class="card-text">
-                On Linkedin you will find my certifications and curriculum vitae.
+                On Linkedin you will find my certifications for courses and bootcamps I completed.
             </div>
         </div>
 
@@ -120,7 +140,7 @@
                 </div>
             </a>
             <div class="card-text">
-                Mini games I developed for my toddler to play.
+                The Playgound contains mini-games I developed for my toddler to play. =)
             </div>
         </div>
 
