--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -63,7 +63,7 @@
                     <div class="card-wrapper">
 
                         <div>
-                            <iframe id="iFrame" src="/api/api.html?surtarso"></iframe>
+                            <iframe id="iFrame" src="https://tarsogalvao.ddns.net/cv/api/api.html?surtarso"></iframe>
                         </div>
 
                     </div>
