small css fixes

--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -59,11 +59,11 @@
 
         <!-- card 0 (no link to click on this one) -->
         <div class="card-container">
-                <div class="card-0">
-                    <div class="card-wrapper">
+                <div class="card-0 card-all">
+                    <div class="card-body">
 
                         <div>
-                            <iframe id="iFrame" src="https://tarsogalvao.ddns.net/cv/api/api.html?surtarso"></iframe>
+                            <iframe id="iFrame" src="https://tarsogalvao.ddns.net/cv/api/api.html?surtarso" scrolling="no"></iframe>
                         </div>
 
                     </div>
@@ -87,7 +87,7 @@
                 href="https://github.com/surtarso" 
                 target="_blank"
             >
-                <div class="card-1">
+                <div class="card-1 card-all">
                     <div class="card-wrapper">
                         <h2>Github</h2>
                         <p>Clone me!</p>
@@ -99,7 +99,7 @@
         <!-- card 2 -->
         <div class="card-container">
             <a class="links" href="https://www.linkedin.com/in/tarsogalvao" target="_blank">
-                <div class="card-2">
+                <div class="card-2 card-all">
                     <div class="card-wrapper">
                         <h2>Linkedin</h2>
                         <p>Hire me!</p>
@@ -120,7 +120,7 @@
                 A project was born and URCade became a framework for building ready-to-use Pi images.
             </div>
             <a class="links" href="https://solidserverbr.ddns.net/urcade/" target="_blank">
-                <div class="card-3">
+                <div class="card-3 card-all">
                     <div class="card-wrapper">
                         <h2>URCade</h2>
                         <p>Play me!</p>
@@ -132,7 +132,7 @@
         <!-- card 4 -->
         <div class="card-container">
             <a class="links" href="https://tarsogalvao.ddns.net/games" target="_blank">
-                <div class="card-4">
+                <div class="card-4 card-all">
                     <div class="card-wrapper">
                         <h2>Playground</h2>
                         <p>Have fun!</p>
@@ -140,7 +140,7 @@
                 </div>
             </a>
             <div class="card-text">
-                The Playgound contains mini-games I developed for my toddler to play. =)
+                The Playground contains mini-games I developed for my toddler to play. =)
             </div>
         </div>
 
