--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -140,12 +140,7 @@
                 </div>
             </a>
             <div class="card-text">
-                The Playground contains mini-games I developed for my toddler to play. =)
-                The Playground contains mini-games I developed for my toddler to play. =)
-                The Playground contains mini-games I developed for my toddler to play. =)
-                The Playground contains mini-games I developed for my toddler to play. =)
-                The Playground contains mini-games I developed for my toddler to play. =)
-
+                The Playground contains mini-games I developed for my toddler to play.
             </div>
         </div>
 
