--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -50,7 +50,7 @@
         <img class="header-image" src="img/me.gif">
         <h1>Tarso Galvão</h1>
         <h3>Full-Stack Developer</h3>
-        <img src="./img/rocket.webp" style="width:25px;height:25px;" id="Rocket">
+        <img src="./img/rocket.webp" id="Rocket">
     </header>
 
     <!-- cards container -->
