comments and refactoring

--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" type="image/png" href="favicon.png"/>
-        <link rel="stylesheet" href="src/style.css">
+        <link rel="stylesheet" href="src/styles.css">
         <title>Tarso Galvão</title>
     </head>
 
@@ -186,7 +186,9 @@
             <p>. Powered by HTML5, CSS and Javascript.</p>
         </footer>
 
-        <script src="src/scripts.js"></script>
+        <!-- controls mode and language buttons -->
+        <script src="src/buttons.js"></script>
+        <!-- controls rocket hidden link -->
         <script src="src/rocket.js"></script>
     </body>
 </html>
