fixed styling, added gifs, comment box'n responsiv

--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -179,6 +179,26 @@
             </div>
 
         </main>
+<br>
+<hr>
+<br>
+        <div class="form-container">
+            <h4>Leave me a message!</h4>
+            <form class="form" action="https://formsubmit.co/tarso.galvao@gmail.com" method="POST">
+                <!-- <input type="hidden" name="_next" value="https://yourdomain.co/thanks.html"> -->
+                <input type="text" name="_honey" style="display:none">
+                <input type="hidden" name="_captcha" value="false">
+                <input type="hidden" name="_autoresponse" value="Obrigado pelo contato./Thank you for your contact.">
+                <input type="hidden" name="_subject" value="Mensagem do site!">
+
+                <input class="form-input" type="text" name="name" required placeholder="name">
+                <input class="form-input" type="email" name="email" required placeholder="email">
+                <textarea class="form-message" name="message" required placeholder="message"></textarea>
+                <button class="form-btn" type="submit">Send</button>
+            </form>
+        </div>
+
+
 
         <!-- FOOTER -->
         <footer class="footer">
