added ty screen, fixed some bg issues

--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -184,8 +184,8 @@
 <br>
         <div class="form-container">
             <h4>Leave me a message!</h4>
-            <form class="form" action="https://formsubmit.co/tarso.galvao@gmail.com" method="POST">
-                <!-- <input type="hidden" name="_next" value="https://yourdomain.co/thanks.html"> -->
+            <form class="form" action="https://formsubmit.co/84650f89c803d4646b0d3490539ffc29" method="POST">
+                <input type="hidden" name="_next" value="https://tarsogalvao.ddns.net/cv/thanks.html">
                 <input type="text" name="_honey" style="display:none">
                 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_autoresponse" value="Obrigado pelo contato./Thank you for your contact.">
