added pt-br messagebox

--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -183,7 +183,7 @@
 <hr>
 <br>
         <div class="form-container">
-            <h4>Leave me a message!</h4>
+            <h4 id="form-title">texts changed in scripts.js</h4>
             <form class="form" action="https://formsubmit.co/84650f89c803d4646b0d3490539ffc29" method="POST">
                 <input type="hidden" name="_next" value="https://tarsogalvao.ddns.net/cv/thanks.html">
                 <input type="text" name="_honey" style="display:none">
@@ -194,7 +194,7 @@
                 <input class="form-input" type="text" name="name" required placeholder="name">
                 <input class="form-input" type="email" name="email" required placeholder="email">
                 <textarea class="form-message" name="message" required placeholder="message"></textarea>
-                <button class="form-btn" type="submit">Send</button>
+                <button class="form-btn" type="submit">texts changed in scripts.js</button>
             </form>
         </div>
 
@@ -207,7 +207,7 @@
         </footer>
 
         <!-- controls mode and language buttons -->
-        <script src="src/buttons.js"></script>
+        <script src="src/scripts.js"></script>
         <!-- controls rocket hidden link -->
         <script src="src/rocket.js"></script>
     </body>
